# otus_16_homework

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  rclss.cpp  rclst.cpp  techstack.md  techstack.yml
